Fix wrapping/mobile styling of main navigation.

--- a/app/assets/stylesheets/pantastic/_basics.scss
+++ b/app/assets/stylesheets/pantastic/_basics.scss
@@ -54,8 +54,15 @@ footer[role="primary"] {
 // NAVIGATION
 nav[role="primary"] {
   @extend %tabs;
-  line-height: 3;
+  line-height: 1.3;
+
+  margin-top: 10px;
   margin-bottom: 20px;
+
+  @include on-desktop {
+    margin-top: 40px;
+    margin-bottom: 30px;
+  }
 
   ul {
     @extend %container;
