--- a/app/assets/stylesheets/pantastic/_tabs.scss
+++ b/app/assets/stylesheets/pantastic/_tabs.scss
@@ -3,7 +3,7 @@
   @extend %nav-text;
 
   li {
-    display: inline;
+    display: inline-block;
     margin-right: 20px;
   }
 
